--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -240,7 +240,7 @@ header
 
 @media (max-width: 960px)
     header
-        height: 1200px
+        height: 1000px
 
         .about_container
             position: relative
@@ -252,10 +252,12 @@ header
 
 
             .about_me_sm
+                position: absolute
                 display: flex
-                width: 500px
-                height: 100%
+                width: 700px
+                height: 800px
                 fill: #fff
+                //top: -100px
 
             .about_me, .periodic_badges
                 display: none
