--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -254,8 +254,8 @@ header
             .about_me_sm
                 position: absolute
                 display: flex
-                width: 700px
-                height: 800px
+                width: 100vh
+                height: 100vh
                 fill: #fff
                 //top: -100px
 
