--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,8 +240,8 @@ header {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        width: 700px;
-        height: 800px;
+        width: 100vh;
+        height: 100vh;
         fill: #fff; }
       header .about_container .about_me, header .about_container .periodic_badges {
         display: none; }
