--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -253,9 +253,7 @@ header
 
             .about_me_sm
                 position: absolute
-                display: flex
-                width: 100vh
-                height: 100vh
+                display: inherit
                 fill: #fff
                 //top: -100px
 
