--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -255,6 +255,8 @@ header
                 position: absolute
                 display: inherit
                 fill: #fff
+                width: 100vw
+                height: 100vh
                 //top: -100px
 
             .about_me, .periodic_badges
