--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -299,3 +299,7 @@ header
                     position: absolute
                     left: 718px
                     top: 181px
+
+@media (max-width: 768px)
+    header
+        height: 1200px
