--- a/assets/css/6-vendors/_swiper_custom.sass
+++ b/assets/css/6-vendors/_swiper_custom.sass
@@ -9,6 +9,6 @@
         color: transparent !important
         position: center
         size: cover
-    width: 260px !important
-    height: 260px !important
-    border: 2px solid #fff
+    width: 240px !important
+    height: 240px !important
+    //border: 2px solid #fff
