--- a/assets/css/4-sections/_myskills.sass
+++ b/assets/css/4-sections/_myskills.sass
@@ -38,6 +38,11 @@
         display: inline
         width: 90px
 
+.skills_logo
+    width: 100%
+    height: 100%
+    fill: #fff
+
 @media (max-width: 767px)
 
     .tag_container1
