--- a/assets/css/4-sections/_myskills.sass
+++ b/assets/css/4-sections/_myskills.sass
@@ -42,6 +42,7 @@
     width: 100%
     height: 100%
     fill: #fff
+    filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.5))
 
 @media (max-width: 767px)
 
