--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -447,7 +447,9 @@ header {
 .skills_logo {
   width: 100%;
   height: 100%;
-  fill: #fff; }
+  fill: #fff;
+  -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5)); }
 
 @media (max-width: 767px) {
   .tag_container1 {
