--- a/assets/css/4-sections/_myskills.sass
+++ b/assets/css/4-sections/_myskills.sass
@@ -1,16 +1,36 @@
 .myskills
     position: relative
-    padding: 50px 0  50px 0
+    //padding: 50px 0  50px 0
     background:
         color: $secondary-color
-        attachment: fixed
-        position: center center
     color: $font-color
-    height: 320px
+    height: 380px
+    //text-align: center
 
     ul
         margin: 0 auto
 
+    .skills_modal
+        position: absolute
+        display: inline-block
+        background-color: rgba(255, 255, 255, 0.7)
+        width: 100%
+        height: 100%
+        z-index: 1000
+        text-align: center
+
+        .skills_modal_inner
+            display: flex
+            flex-direction: row
+            justify-content: center
+
+
+            .gesture-swipe-left
+                height: 250px
+                width: 250px
+                fill:  $secondary-color
+                filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.7))
+                padding-top: 90px
 
 .skills_title_container
     position: relative
@@ -29,11 +49,6 @@
         bottom: 0
         transform: rotate(270deg)
 
-
-.skill_icons_container
-    position: relative
-    height: 450px
-
     .skills-icon
         display: inline
         width: 90px
@@ -43,6 +58,7 @@
     height: 100%
     fill: #fff
     filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.5))
+
 
 @media (max-width: 767px)
 
