--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -411,14 +411,37 @@ header {
 
 .myskills {
   position: relative;
-  padding: 50px 0  50px 0;
   background-color: #008598;
-  background-attachment: fixed;
-  background-position: center center;
   color: #fff;
-  height: 320px; }
+  height: 380px; }
   .myskills ul {
     margin: 0 auto; }
+  .myskills .skills_modal {
+    position: absolute;
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    text-align: center; }
+    .myskills .skills_modal .skills_modal_inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      .myskills .skills_modal .skills_modal_inner .gesture-swipe-left {
+        height: 250px;
+        width: 250px;
+        fill: #008598;
+        -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.7));
+                filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.7));
+        padding-top: 90px; }
 
 .skills_title_container {
   position: relative;
@@ -436,11 +459,7 @@ header {
     bottom: 0;
     -webkit-transform: rotate(270deg);
             transform: rotate(270deg); }
-
-.skill_icons_container {
-  position: relative;
-  height: 450px; }
-  .skill_icons_container .skills-icon {
+  .skills_title_container .skills-icon {
     display: inline;
     width: 90px; }
 
