--- a/assets/css/4-sections/_myskills.sass
+++ b/assets/css/4-sections/_myskills.sass
@@ -4,8 +4,8 @@
     background:
         color: $secondary-color
     color: $font-color
-    height: 380px
-    //text-align: center
+    height: 350px
+    margin:
 
     ul
         margin: 0 auto
@@ -23,7 +23,7 @@
             display: flex
             flex-direction: row
             justify-content: center
-
+            transition: all 1s ease-out
 
             .gesture-swipe-left
                 height: 250px
@@ -33,9 +33,11 @@
                 padding-top: 90px
 
 .skills_title_container
-    position: relative
-    top: 60px
+    position: absolute
+    display: flex
+    top: 190px
     width: 200px
+    text-align: center
 
     .skills_title
         position: absolute
