--- a/assets/css/6-vendors/_swiper_custom.sass
+++ b/assets/css/6-vendors/_swiper_custom.sass
@@ -1,7 +1,7 @@
 .swiper-container
-    height: 260px
-    width: 90%
-    padding-top: 0
+    height: 300px
+    width: 85%
+    padding-top: 50px
     padding-bottom: 0
 
 .swiper-slide
