--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -294,7 +294,7 @@ header {
       font-size: 30px;
       color: #008598;
       text-transform: uppercase;
-      width: 300px;
+      width: 320px;
       right: 0;
       bottom: 0;
       -webkit-transform: rotate(270deg);
@@ -413,7 +413,7 @@ header {
   position: relative;
   background-color: #008598;
   color: #fff;
-  height: 380px; }
+  height: 350px; }
   .myskills ul {
     margin: 0 auto; }
   .myskills .skills_modal {
@@ -434,7 +434,9 @@ header {
               flex-direction: row;
       -webkit-box-pack: center;
           -ms-flex-pack: center;
-              justify-content: center; }
+              justify-content: center;
+      -webkit-transition: all 1s ease-out;
+      transition: all 1s ease-out; }
       .myskills .skills_modal .skills_modal_inner .gesture-swipe-left {
         height: 250px;
         width: 250px;
@@ -444,9 +446,13 @@ header {
         padding-top: 90px; }
 
 .skills_title_container {
-  position: relative;
-  top: 60px;
-  width: 200px; }
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: 190px;
+  width: 200px;
+  text-align: center; }
   .skills_title_container .skills_title {
     position: absolute;
     font-family: 'Muli';
@@ -795,9 +801,9 @@ th {
   padding: 0; }
 
 .swiper-container {
-  height: 260px;
-  width: 90%;
-  padding-top: 0;
+  height: 300px;
+  width: 85%;
+  padding-top: 50px;
   padding-bottom: 0; }
 
 .swiper-slide {
