--- a/assets/css/4-sections/_myskills.sass
+++ b/assets/css/4-sections/_myskills.sass
@@ -5,7 +5,25 @@
         color: $secondary-color
     color: $font-color
     height: 350px
-    margin:
+
+    //.skills_title_container
+        position: absolute
+        display: flex
+        top: 190px
+        width: 200px
+        text-align: center
+
+        //.skills_title
+            position: absolute
+            font-family: 'Muli'
+            font-weight: 900
+            font-size: 30px
+            color: white
+            text-transform: uppercase
+            width: 300px
+            right: 0
+            bottom: 0
+            transform: rotate(270deg)
 
     ul
         margin: 0 auto
@@ -31,29 +49,6 @@
                 fill:  $secondary-color
                 filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.7))
                 padding-top: 90px
-
-.skills_title_container
-    position: absolute
-    display: flex
-    top: 190px
-    width: 200px
-    text-align: center
-
-    .skills_title
-        position: absolute
-        font-family: 'Muli'
-        font-weight: 900
-        font-size: 30px
-        color: white
-        text-transform: uppercase
-        width: 300px
-        right: 0
-        bottom: 0
-        transform: rotate(270deg)
-
-    .skills-icon
-        display: inline
-        width: 90px
 
 .skills_logo
     width: 100%
