--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,71 @@
 @import url(https://fonts.googleapis.com/css?family=Muli:300,400,900);
+.title_container {
+  position: absolute;
+  height: 100%;
+  background: none;
+  width: 50px;
+  z-index: 1000; }
+  .title_container .title_content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    height: 100%; }
+  .title_container .title_text {
+    font-family: 'Muli';
+    font-weight: 900;
+    font-size: 30px;
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    white-space: nowrap;
+    -webkit-transform: translateX(50%) rotate(-90deg);
+            transform: translateX(50%) rotate(-90deg);
+    -webkit-transform-origin: left;
+            transform-origin: left; }
+  .title_container #works {
+    position: relative;
+    bottom: 100px;
+    color: #008598; }
+  .title_container #skills {
+    position: relative;
+    bottom: 70px; }
+
+@media (max-width: 450px) {
+  .title_container {
+    width: 30px;
+    z-index: 1000; }
+    .title_container .title_content {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end;
+      height: 100%; }
+    .title_container .title_text {
+      font-family: 'Muli';
+      font-weight: 900;
+      font-size: 20px;
+      text-transform: uppercase;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      white-space: nowrap;
+      -webkit-transform: translateX(50%) rotate(-90deg);
+              transform: translateX(50%) rotate(-90deg);
+      -webkit-transform-origin: left;
+              transform-origin: left; } }
+
 body {
   width: 100%;
   margin: 0;
@@ -283,22 +350,6 @@ header {
   overflow: hidden;
   padding: 0 0 80px 0;
   background: white; }
-  .hexagon-container .works_title_container {
-    position: absolute;
-    top: 50%;
-    width: 200px; }
-    .hexagon-container .works_title_container .works_title {
-      position: absolute;
-      font-family: 'Muli';
-      font-weight: 900;
-      font-size: 30px;
-      color: #008598;
-      text-transform: uppercase;
-      width: 320px;
-      right: 0;
-      bottom: 0;
-      -webkit-transform: rotate(270deg);
-              transform: rotate(270deg); }
   .hexagon-container .hexagon-inner {
     width: 855px;
     margin: 0 auto; }
@@ -444,30 +495,6 @@ header {
         -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.7));
                 filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.7));
         padding-top: 90px; }
-
-.skills_title_container {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  top: 190px;
-  width: 200px;
-  text-align: center; }
-  .skills_title_container .skills_title {
-    position: absolute;
-    font-family: 'Muli';
-    font-weight: 900;
-    font-size: 30px;
-    color: white;
-    text-transform: uppercase;
-    width: 300px;
-    right: 0;
-    bottom: 0;
-    -webkit-transform: rotate(270deg);
-            transform: rotate(270deg); }
-  .skills_title_container .skills-icon {
-    display: inline;
-    width: 90px; }
 
 .skills_logo {
   width: 100%;
