--- a/assets/css/2-base/_typography.sass
+++ b/assets/css/2-base/_typography.sass
@@ -59,3 +59,12 @@
             white-space: nowrap
             transform: translateX(50%) rotate(-90deg)
             transform-origin: left
+
+        #works
+            position: relative
+            bottom: 940px
+            color: $secondary-color
+
+        #skills
+            position: relative
+            bottom: 100px
