--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -1,8 +1,10 @@
 header
     position: relative
+    display: flex
+    justify-content: center
     width: 100%
     height: 850px
-    padding-bottom: 0
+    padding: 50px 0 0 0
 
     video
         position: fixed
@@ -16,290 +18,310 @@ header
             size: cover
             position: center center
 
-#video-bg
-    position: fixed
-    right: 0
-    bottom: 0
-    min-width: 100%
-    min-height: 100%
-    width: auto
-    height: auto
-
-
-.about_container
-    position: relative
-    width: 1000px
-    margin: 0 auto
-
-    .about_me
-        position: relative
-        left: -148px
-        width: 800px
-        height: 800px
-        -webkit-filter: drop-shadow(0 0 15px rgba(0, 0, 0,5))
-        filter: drop-shadow(0 0 15px rgba(0, 0, 0,5))
-
-    .about_me_sm
-        display: none
-
-
-    .periodic_badges
-        position: absolute
-        top: 220px
-        left: -60px
-        -webkit-filter: drop-shadow(0 0 30px rgba(0, 0, 0, 1))
-        filter: drop-shadow(0 0 30px rgba(0, 0, 0, 1))
-
-        #about-badge
-            fill: white
-            width: 150px
-            height: 150px
-
-        .logo
-            position: absolute
-            top: -125px
-            left: 500px
-            width: 150px
-            height: 150px
-
-        .front-end_hexa
-            position: absolute
-            left: 574px
-            //top: -72px
-
-        .dv_hexa
-            position: absolute
-            left: 718px
-            //top: -72px
-
-        .de_hexa
-            position: absolute
-            left: 788px
-            top: 125px
-
-        .ux_hexa
-            position: absolute
-            left: 932px
-            top: 125px
-
-        .ui_hexa
-            position: absolute
-            left: 860px
-            top: 250px
-
-    .scroll-down
-        position: absolute
-        left: 50%
-        bottom: 120px
-        font-size: 35px
-        color: $font-color
-        transform: translate(-50%, 0%)
-        animation: fade_arrow 2s ease-in-out infinite
-
-        &:hover
-            color: $font-color
-
-        &:active
-            color: $font-color
-
-        @keyframes fade_arrow
-          0%
-            transform: translate(0, -15px)
-            opacity: 0
-
-          50%
-            opacity: 1
-
-          100%
-            transform: translate(0, 15px)
-            opacity: 0
-
-        @media (max-width: 713px)
-            .scroll-down
-                top: 50px
-
-        @media (max-width: 431px)
-            .scroll-down
-                top: 20px
-
-.header_bottom
-    min-height: 50px
-    min-width: 100%
-    position: absolute
-    bottom: 0
-    background-color: #fff
-    z-index: -5
-
-    &:after
-        content: ''
-        width: 100%
-        height: 130px
-        position: absolute
-        top: 0px
-        background: inherit
-        z-index: 6
-        transform-origin: right top
-        transform: skewY(3deg)
-
-@media (max-width: 1200px)
-    header
-        position: relative
-        top: -80px
-        height: 1000px
+    #video-bg
+        position: fixed
+        right: 0
+        bottom: 0
+        min-width: 100%
+        min-height: 100%
+        width: auto
+        height: auto
 
     .about_container
-        position: relative
-        width: 1000px
+        display: flex
+        flex-direction: row
+        justify-content: center
 
-    .about_me
-        position: relative
-        left: -148px
-        width: 800px
-        height: 800px
-        -webkit-filter: drop-shadow(0 0 15px rgba(0, 0, 0,5))
-        filter: drop-shadow(0 0 15px rgba(0, 0, 0,5))
+        .about_text
+            position: relative
+            //flex-direction: row
+            width: 500px
+            height: 600px
+            //background:
+                color: rgb(53, 130, 173)
+
+            .about_me
+                position: absolute
+                top: -50px
+                left: -50px
+                width: 700px
+                height: 700px
 
         .periodic_badges
-            position: absolute
-            top: 165px
-            left: -85px
-            -webkit-filter: drop-shadow(0 0 30px rgba(0, 0, 0, 1))
-            filter: drop-shadow(0 0 30px rgba(0, 0, 0, 1))
+            position: relative
+            width: 500px
+            height: 300px
+            //background:
+                color: rgb(68, 164, 217)
+            z-index: -5
+
+            #about-badge
+                fill: #fff
 
             .logo
                 position: absolute
-                top: -100px
-                left: 509px
-                width: 150px
-                height: 150px
-
-
-
-@media (max-width: 1100px)
-
-    header
-        //height: 800px
-        //background:
-            image: url("../img/hero_bg.jpg")
-            size: cover
-            position: center center
-
-    .about_container
-        position: relative
-        width: 680px
-        top: 50px
-
-        .periodic_badges
-            position: absolute
-            left: -160px
-            top: 320px
-
-            .logo
-                position: absolute
-                top: -225px
-                left: 592px
+                top: 15px
+                left: -41px
                 width: 150px
                 height: 150px
 
             .front-end_hexa
                 position: absolute
-                left: 668px
-                top: -100px
+                left: -52px
+                top: 127px
 
             .dv_hexa
                 position: absolute
-                left: 731px
-                top: 30px
+                left: 10px
+                top: 237px
 
             .de_hexa
                 position: absolute
-                left: 668px
-                top: 160px
+                left: 135px
+                top: 237px
 
             .ux_hexa
                 position: absolute
-                left: 600px
-                top: 288px
+                left: 72px
+                top: 347px
 
             .ui_hexa
                 position: absolute
-                left: 150px
-                top: 288px
+                left: 10px
+                top: 456px
+
+
+    .scroll_container
+        display: flex
+        flex-direction: row
+        justify-content: center
+        padding: 50px 0 0 0
+
+        .scroll-down
+            justify-content: center
+            bottom: 120px
+            font-size: 35px
+            color: $font-color
+            transform: translate(-50%, 0%)
+            animation: fade_arrow 2s ease-in-out infinite
+
+            &:hover
+                color: $font-color
+
+            &:active
+                color: $font-color
+
+            @keyframes fade_arrow
+              0%
+                transform: translate(0, -15px)
+                opacity: 0
+              50%
+                opacity: 1
+              100%
+                transform: translate(0, 15px)
+                opacity: 0
+
+            @media (max-width: 713px)
+                .scroll-down
+                    top: 50px
+
+            @media (max-width: 431px)
+                .scroll-down
+                    top: 20px
+
+    .header_bottom
+        position: absolute
+        min-height: 50px
+        min-width: 100%
+        bottom: 0
+        padding: 0
+        margin: 0
+        background-color: #fff
+        //z-index: -5
+
+        &:after
+            content: ''
+            width: 100%
+            height: 130px
+            position: absolute
+            top: 0px
+            background: inherit
+            z-index: 6
+            transform-origin: right top
+            transform: skewY(3deg)
+
+
+@media (max-width: 1200px)
+    header
+        position: relative
+        display: flex
+        justify-content: center
+        width: 100%
+        height: 850px
+        padding: 50px 0 0 0
+
+
+        .about_container
+            display: flex
+            flex-direction: row
+            align-items: center
+
+            .about_text
+                width: 500px
+                height: 300px
+                //background:
+                    color: rgb(53, 130, 173)
+
+            .periodic_badges
+                width: 500px
+                height: 300px
+                //background:
+                    color: rgb(68, 164, 217)
+
+        .header_bottom
+            position: absolute
+            min-height: 0px
+            min-width: 100%
+            bottom: -20px
+            padding: 0
+            margin: 0
+            background-color: #fff
+            z-index: -5
+
+            &:after
+                content: ''
+                width: 100%
+                height: 130px
+                position: absolute
+                top: 0px
+                background: inherit
+                z-index: 6
+                transform-origin: right top
+                transform: skewY(3deg)
 
     .scroll-down
-        top: 750px
+        padding: 200px 0 0 0
+
+
+@media (max-width: 1100px)
+
+    header
+        position: relative
+        display: flex
+        justify-content: center
+        width: 100%
+        height: 850px
+        padding: 50px 0 0 0
+
+        .about_container
+
+            .about_text
+                display: flex
+                justify-content: center
+                //width: 600px
+                //height: 600px
+                //background:
+                    color: rgb(53, 130, 173)
+
+                .about_me
+
+                    justify-content: center
+                    //position: absolute
+                    top: -50px
+                    left: -50px
+                    //width: 700px
+                    //height: 700px
+
+            .periodic_badges
+                position: relative
+                width: 400px
+                height: 600px
+                //background:
+                    color: rgb(68, 164, 217)
+                z-index: -5
 
     .header_bottom
         //min-height: 50px
         min-width: 100%
         position: absolute
-        bottom: -57px
+        bottom: -37px
         background-color: #fff
-        z-index: -5
+
+    .scroll-down
+        padding: 0
 
 
 @media (max-width: 960px)
     header
-        height: 1000px
+        width: 100%
+        height: 1300px
+        padding: 50px 0 0 0
 
         .about_container
-            position: relative
-            width: auto
-            height: 100%
-            top: 100px
             display: flex
+            flex-direction: column
             justify-content: center
 
+            .about_text
+                position: relative
+                display: flex
+                flex-direction: column
+                align-items: center
+                width: 150%
+                height: 500px
+                //background:
+                    color: rgb(53, 130, 173)
 
-            .about_me_sm
-                position: absolute
-                display: inherit
-                fill: #fff
-                width: 100vw
-                height: 100vh
-                //top: -100px
+                .about_me
+                    position: absolute
+                    top: -80px
+                    left: 0
+                    width: 100%
+                    //border: 1px solid red
 
-            .about_me, .periodic_badges
+            .periodic_badges
                 display: none
-
+                position: relative
+                width: 500px
+                height: 300px
+                background-color: rgb(68, 164, 217)
+                z-index: -5
 
                 #about-badge
-                    fill: white
-                    width: 120px
-                    height: 120px
+                    fill: #fff
 
                 .logo
                     position: absolute
-                    top: -200px
-                    left: 509px
+                    top: 15px
+                    left: -41px
                     width: 150px
                     height: 150px
 
                 .front-end_hexa
                     position: absolute
-                    left: 574px
-                    top: -72px
+                    left: -52px
+                    top: 127px
 
                 .dv_hexa
                     position: absolute
-                    left: 718px
-                    top: -72px
+                    left: 10px
+                    top: 237px
 
                 .de_hexa
                     position: absolute
-                    left: 645px
-                    top: 55px
+                    left: 135px
+                    top: 237px
 
                 .ux_hexa
                     position: absolute
-                    left: 792px
-                    top: 55px
+                    left: 72px
+                    top: 347px
 
                 .ui_hexa
                     position: absolute
-                    left: 718px
-                    top: 181px
+                    left: 10px
+                    top: 456px
 
-@media (max-width: 768px)
+//@media (max-width: 768px)
     header
         height: 700px
