--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -42,10 +42,10 @@ header
 
             .about_me
                 position: absolute
-                top: -50px
-                left: -50px
-                width: 700px
-                height: 700px
+                top: 20px
+                left: 20px
+                width: 100%
+                height: 100%
 
         .periodic_badges
             position: relative
@@ -160,7 +160,6 @@ header
         height: 850px
         padding: 50px 0 0 0
 
-
         .about_container
             display: flex
             flex-direction: row
@@ -168,13 +167,14 @@ header
 
             .about_text
                 width: 500px
-                height: 300px
+                height: 600px
                 //background:
                     color: rgb(53, 130, 173)
 
             .periodic_badges
                 width: 500px
                 height: 300px
+                top: -145px
                 //background:
                     color: rgb(68, 164, 217)
 
@@ -219,21 +219,19 @@ header
                 display: flex
                 justify-content: center
                 //width: 600px
-                //height: 600px
+                height: 600px
                 //background:
                     color: rgb(53, 130, 173)
 
                 .about_me
-
-                    justify-content: center
-                    //position: absolute
-                    top: -50px
-                    left: -50px
+                    top: 20px
+                    left: 10px
                     //width: 700px
                     //height: 700px
 
             .periodic_badges
                 position: relative
+                top: 0
                 width: 400px
                 height: 600px
                 //background:
@@ -254,7 +252,7 @@ header
 @media (max-width: 960px)
     header
         width: 100%
-        height: 1300px
+        height: 1100px
         padding: 50px 0 0 0
 
         .about_container
@@ -267,60 +265,60 @@ header
                 display: flex
                 flex-direction: column
                 align-items: center
-                width: 150%
+                width: 100%
                 height: 500px
+                //margin-top: 25px
                 //background:
                     color: rgb(53, 130, 173)
 
                 .about_me
                     position: absolute
-                    top: -80px
+                    top: 0
                     left: 0
                     width: 100%
                     //border: 1px solid red
 
             .periodic_badges
-                display: none
                 position: relative
                 width: 500px
-                height: 300px
-                background-color: rgb(68, 164, 217)
+                height: 400px
+                //background-color: rgb(68, 164, 217)
                 z-index: -5
 
                 #about-badge
                     fill: #fff
+                    width: 120px
 
                 .logo
                     position: absolute
-                    top: 15px
-                    left: -41px
-                    width: 150px
-                    height: 150px
+                    top: -30px
+                    left: 130px
+                    width: 120px
 
                 .front-end_hexa
                     position: absolute
-                    left: -52px
-                    top: 127px
+                    top: -30px
+                    left: 249px
 
                 .dv_hexa
                     position: absolute
-                    left: 10px
-                    top: 237px
+                    top: 71px
+                    left: 190px
 
                 .de_hexa
                     position: absolute
-                    left: 135px
-                    top: 237px
+                    top: 172px
+                    left: 130px
 
                 .ux_hexa
                     position: absolute
-                    left: 72px
-                    top: 347px
+                    top: 172px
+                    left: 248px
 
                 .ui_hexa
                     position: absolute
-                    left: 10px
-                    top: 456px
+                    top: 274px
+                    left: 190px
 
 //@media (max-width: 768px)
     header
