--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -22,8 +22,8 @@ header
         position: fixed
         right: 0
         bottom: 0
-        min-width: 100%
-        min-height: 100%
+        //min-width: 100%
+        //min-height: 100%
         width: auto
         height: auto
 
@@ -280,7 +280,7 @@ header
 
             .periodic_badges
                 position: relative
-                width: 500px
+                width: 100%
                 height: 400px
                 //background-color: rgb(68, 164, 217)
                 z-index: -5
@@ -291,34 +291,34 @@ header
 
                 .logo
                     position: absolute
-                    top: -30px
-                    left: 130px
-                    width: 120px
+                    top: -550px
+                    left: 40px
+                    width: 100px
 
                 .front-end_hexa
                     position: absolute
                     top: -30px
-                    left: 249px
+                    left: 63px
 
                 .dv_hexa
                     position: absolute
-                    top: 71px
-                    left: 190px
+                    top: -30px
+                    left: 179px
 
                 .de_hexa
                     position: absolute
-                    top: 172px
-                    left: 130px
+                    top: 72px
+                    left: 121px
 
                 .ux_hexa
                     position: absolute
-                    top: 172px
-                    left: 248px
+                    top: 174px
+                    left: 63px
 
                 .ui_hexa
                     position: absolute
-                    top: 274px
-                    left: 190px
+                    top: 174px
+                    left: 179px
 
 //@media (max-width: 768px)
     header
