--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,36 +134,36 @@ header {
         left: 20px;
         width: 100%;
         height: 100%; }
-    header .about_container .periodic_badges {
+    header .about_container .hexa_badges {
       position: relative;
       width: 500px;
       height: 300px;
       z-index: -5; }
-      header .about_container .periodic_badges #about-badge {
+      header .about_container .hexa_badges #about-badge {
         fill: #fff; }
-      header .about_container .periodic_badges .logo {
+      header .about_container .hexa_badges .logo {
         position: absolute;
         top: 15px;
         left: -41px;
         width: 150px;
         height: 150px; }
-      header .about_container .periodic_badges .front-end_hexa {
+      header .about_container .hexa_badges .front-end_hexa {
         position: absolute;
         left: -52px;
         top: 127px; }
-      header .about_container .periodic_badges .dv_hexa {
+      header .about_container .hexa_badges .dv_hexa {
         position: absolute;
         left: 10px;
         top: 237px; }
-      header .about_container .periodic_badges .de_hexa {
+      header .about_container .hexa_badges .de_hexa {
         position: absolute;
         left: 135px;
         top: 237px; }
-      header .about_container .periodic_badges .ux_hexa {
+      header .about_container .hexa_badges .ux_hexa {
         position: absolute;
         left: 72px;
         top: 347px; }
-      header .about_container .periodic_badges .ui_hexa {
+      header .about_container .hexa_badges .ui_hexa {
         position: absolute;
         left: 10px;
         top: 456px; }
@@ -271,7 +271,7 @@ header {
       header .about_container .about_text {
         width: 500px;
         height: 600px; }
-      header .about_container .periodic_badges {
+      header .about_container .hexa_badges {
         width: 500px;
         height: 300px;
         top: -145px; }
@@ -322,7 +322,7 @@ header {
       header .about_container .about_text .about_me {
         top: 20px;
         left: 10px; }
-    header .about_container .periodic_badges {
+    header .about_container .hexa_badges {
       position: relative;
       top: 0;
       width: 400px;
@@ -371,39 +371,55 @@ header {
           top: 0;
           left: 0;
           width: 100%; }
-      header .about_container .periodic_badges {
+      header .about_container .hexa_badges {
         position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         width: 100%;
         height: 400px;
         z-index: -5; }
-        header .about_container .periodic_badges #about-badge {
-          fill: #fff;
-          width: 120px; }
-        header .about_container .periodic_badges .logo {
-          position: absolute;
-          top: -550px;
-          left: 40px;
-          width: 100px; }
-        header .about_container .periodic_badges .front-end_hexa {
-          position: absolute;
-          top: -30px;
-          left: 63px; }
-        header .about_container .periodic_badges .dv_hexa {
-          position: absolute;
-          top: -30px;
-          left: 179px; }
-        header .about_container .periodic_badges .de_hexa {
-          position: absolute;
-          top: 72px;
-          left: 121px; }
-        header .about_container .periodic_badges .ux_hexa {
-          position: absolute;
-          top: 174px;
-          left: 63px; }
-        header .about_container .periodic_badges .ui_hexa {
-          position: absolute;
-          top: 174px;
-          left: 179px; } }
+        header .about_container .hexa_badges .badges_container {
+          position: relative;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          width: 250px;
+          height: 300px; }
+          header .about_container .hexa_badges .badges_container #about-badge {
+            fill: #fff;
+            width: 120px; }
+          header .about_container .hexa_badges .badges_container .logo {
+            position: absolute;
+            top: 280px;
+            left: 65px;
+            width: 120px; }
+          header .about_container .hexa_badges .badges_container .front-end_hexa {
+            position: absolute;
+            top: -28px;
+            left: 6px; }
+          header .about_container .hexa_badges .badges_container .dv_hexa {
+            position: absolute;
+            top: -28px;
+            left: 123px; }
+          header .about_container .hexa_badges .badges_container .de_hexa {
+            position: absolute;
+            top: 75px;
+            left: 65px; }
+          header .about_container .hexa_badges .badges_container .ux_hexa {
+            position: absolute;
+            top: 176px;
+            left: 6px; }
+          header .about_container .hexa_badges .badges_container .ui_hexa {
+            position: absolute;
+            top: 176px;
+            left: 123px; } }
 
 .hexagon-container {
   position: relative;
