--- a/assets/css/2-base/_body.sass
+++ b/assets/css/2-base/_body.sass
@@ -3,11 +3,15 @@ body
     margin: 0
     padding: 0
     overflow-x: hidden
-
+    background:
+        image: url("../img/hexa_bg.jpg")
+        size: cover
+        position: center center
+        attachment: fixed
 
 .hidden
     display: none
 
 .mark
     border: 1px solid #1dde2c
-    background-color: transparent !important    
+    background-color: transparent !important
