--- a/assets/css/2-base/_typography.sass
+++ b/assets/css/2-base/_typography.sass
@@ -30,12 +30,12 @@
         transform: translateX(50%) rotate(-90deg)
         transform-origin: left
 
-    #works
+    #title-color_one
         position: relative
         bottom: 100px
-        color: $secondary-color
+        color: $font-color
 
-    #skills
+    #title-color_two
         position: relative
         bottom: 70px
 
@@ -62,7 +62,7 @@
 
         #works
             position: relative
-            bottom: 940px
+            bottom: 900px
             color: $secondary-color
 
         #skills
