--- a/assets/css/4-sections/_footer.sass
+++ b/assets/css/4-sections/_footer.sass
@@ -1,5 +1,6 @@
 footer
-    font-family: 'Arial'
+    font-family: 'Muli'
     font-size: 12px
-    text-align: center
+    color: #d2d2d2
+    text-align: center !important
     margin: 10px 0 10px 0
