--- a/assets/css/4-sections/_sections-dir.sass
+++ b/assets/css/4-sections/_sections-dir.sass
@@ -3,6 +3,6 @@
 @import 'myworks'
 @import 'myskills'
 @import 'contact'
-//@import 'footer'
+@import 'footer'
 //@import 'form'
 //@import 'form-success'
