--- a/assets/css/4-sections/_contact.sass
+++ b/assets/css/4-sections/_contact.sass
@@ -1,45 +1,53 @@
 .form-container
-    background: #fff !important
-    padding: 50px 0 50px 0
+    background-color: transparent
+    //background: #fff !important
+    padding: 100px 0 50px 0
 
 form
     max-width: 400px
     margin: 0 auto
     padding-bottom: 50px
 
-
     input
         font-family: 'Muli'
         font-weight: 300
+        color: $font-color
         margin-bottom: 10px
         width: 100%
         height: 40px
         border: none
-        border-bottom: 3px solid $secondary-color
+        background: none
+        border-bottom: 3px solid $font-color
         transition: border-bottom 0.4s ease
 
         &:focus,
         &:active
             outline: none
-            border-bottom: 5px solid $secondary-color-light
+            border-bottom: 5px solid $font-color
 
+        &::placeholder
+            color: white
 
     textarea
         font-family: 'Muli'
         font-weight: 300
         font-size: 18px
+        color: $font-color
         width: 100%
         margin: 10px 0 30px 0
+        background: none
         resize: none
         border: none
-        border-bottom: 3px solid $secondary-color
+        border-bottom: 3px solid $font-color
         transition: border-bottom 0.4s ease
 
         &:focus,
         &:active
             outline: none
-            border-bottom: 5px solid $secondary-color-light
+            border-bottom: 5px solid $font-color
 
+        &::placeholder
+            color: white
 
     button
         display: block
@@ -50,17 +58,17 @@ form
         font-size: 18px
         color: white
         margin: 0 auto
-        border: none
-        background: $secondary-color
-        -webkit-transition: background-color 1s ease
-        transition: background-color 1s ease
+        border: 1px solid $font-color
+        //filter: drop-shadow(7px 7px 7px rgba(0,0,0,0.5))
+        background: none
+        -webkit-transition: all 1s ease
+        transition: all 1s ease
         border-radius: 50px
 
         &:hover
-            border: 2px solid $secondary-color
-            color: $secondary-color
-            background: none
-
+            border: 2px solid $font-color
+            color: $font-color
+            background: $primary-color-light
 
 .form-title
     position: relative
@@ -69,5 +77,5 @@ form
     font-family: 'Muli'
     font-weight: 900
     font-size: 30px
-    color: $secondary-color
+    color: $font-color
     text-transform: uppercase
