--- a/assets/css/4-sections/_header.sass
+++ b/assets/css/4-sections/_header.sass
@@ -5,8 +5,13 @@ header
     width: 100%
     height: 850px
     padding: 50px 0 0 0
+    //background:
+        image: url("../img/hexa_bg.png")
+        size: cover
+        position: center center
+        attachment: fixed
 
-    video
+    //video
         position: fixed
         //-o-object-fit: cover
         object-fit: cover
@@ -18,14 +23,14 @@ header
             size: cover
             position: center center
 
-    #video-bg
+    //#video-bg
         position: fixed
         right: 0
         bottom: 0
         //min-width: 100%
         //min-height: 100%
-        width: auto
-        height: auto
+        width: 100%
+        height: 100%
 
     .about_container
         display: flex
@@ -46,6 +51,7 @@ header
                 left: 20px
                 width: 100%
                 height: 100%
+                filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.5))
 
         .hexa_badges
             position: relative
@@ -53,10 +59,11 @@ header
             height: 300px
             //background:
                 color: rgb(68, 164, 217)
-            z-index: -5
+            //z-index: -5
 
             #about-badge
                 fill: #fff
+                filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.5))
 
             .logo
                 position: absolute
@@ -64,8 +71,9 @@ header
                 left: -41px
                 width: 150px
                 height: 150px
+                filter: drop-shadow(10px 10px 7px rgba(0,0,0,0.5))
 
-            .front-end_hexa
+            .fe_hexa
                 position: absolute
                 left: -52px
                 top: 127px
@@ -89,7 +97,6 @@ header
                 position: absolute
                 left: 10px
                 top: 456px
-
 
     .scroll_container
         display: flex
@@ -182,11 +189,11 @@ header
             position: absolute
             min-height: 0px
             min-width: 100%
-            bottom: -20px
+            bottom: 60px
             padding: 0
             margin: 0
             background-color: #fff
-            z-index: -5
+            //z-index: -5
 
             &:after
                 content: ''
@@ -236,7 +243,7 @@ header
                 height: 600px
                 //background:
                     color: rgb(68, 164, 217)
-                z-index: -5
+                //z-index: -5
 
     .header_bottom
         //min-height: 50px
@@ -250,10 +257,17 @@ header
 
 
 @media (max-width: 960px)
+    body
+        background:
+            image: url("../img/hexa_bg.jpg")
+            size: cover
+            position: right center
+            attachment: fixed
+
     header
         width: 100%
         height: 1100px
-        padding: 50px 0 0 0
+        padding: 0
 
         .about_container
             display: flex
@@ -267,16 +281,12 @@ header
                 align-items: center
                 width: 100%
                 height: 500px
-                //margin-top: 25px
-                //background:
-                    color: rgb(53, 130, 173)
 
                 .about_me
                     position: absolute
                     top: 0
                     left: 0
                     width: 100%
-                    //border: 1px solid red
 
             .hexa_badges
                 position: relative
@@ -284,8 +294,6 @@ header
                 justify-content: center
                 width: 100%
                 height: 400px
-                //background-color: rgb(68, 164, 217)
-                z-index: -5
 
                 .badges_container
                     position: relative
@@ -304,14 +312,14 @@ header
                         left: 65px
                         width: 120px
 
-                    .front-end_hexa
+                    .fe_hexa
                         position: absolute
-                        top: -28px
+                        top: -26px
                         left: 6px
 
                     .dv_hexa
                         position: absolute
-                        top: -28px
+                        top: -26px
                         left: 123px
 
                     .de_hexa
