--- a/assets/css/4-sections/_myworks.sass
+++ b/assets/css/4-sections/_myworks.sass
@@ -6,24 +6,7 @@
     position: relative
     overflow: hidden
     padding: 0 0 80px 0
-    background: white
-
-    //.works_title_container
-        position: absolute
-        top: 50%
-        width: 200px
-
-        //.works_title
-            position: absolute
-            font-family: 'Muli'
-            font-weight: 900
-            font-size: 30px
-            color: $secondary-color
-            text-transform: uppercase
-            width: 300px
-            right: 0
-            bottom: 0
-            transform: rotate(270deg)
+    //background: white
 
     .hexagon-inner
         width: 855px
