--- a/assets/css/5-components/_forms.sass
+++ b/assets/css/5-components/_forms.sass
@@ -1,14 +1,12 @@
 form
     border: none
-    font-family: 'Exo-regular'
-    
+    font-family: 'Muli'
+    color: black
+    font-size: 16px !important
+
 .form-control
     border: 1px solid $primary-color
     border-radius: 0px
-    
+
     &:focus
         border-color: $primary-color-light
-        
-    
-
-
