--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,11 +29,11 @@
             transform: translateX(50%) rotate(-90deg);
     -webkit-transform-origin: left;
             transform-origin: left; }
-  .title_container #works {
+  .title_container #title-color_one {
     position: relative;
     bottom: 100px;
-    color: #008598; }
-  .title_container #skills {
+    color: #fff; }
+  .title_container #title-color_two {
     position: relative;
     bottom: 70px; }
 
@@ -67,7 +67,7 @@
               transform-origin: left; }
     .title_container #works {
       position: relative;
-      bottom: 940px;
+      bottom: 900px;
       color: #008598; }
     .title_container #skills {
       position: relative;
@@ -77,7 +77,11 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  background-image: url("../img/hexa_bg.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed; }
 
 .hidden {
   display: none; }
@@ -97,22 +101,6 @@ header {
   width: 100%;
   height: 850px;
   padding: 50px 0 0 0; }
-  header video {
-    position: fixed;
-    -o-object-fit: cover;
-       object-fit: cover;
-    width: 100%;
-    height: 100%;
-    z-index: -5;
-    background-image: url("../img/hero_bg.jpg");
-    background-size: cover;
-    background-position: center center; }
-  header #video-bg {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto; }
   header .about_container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -133,21 +121,26 @@ header {
         top: 20px;
         left: 20px;
         width: 100%;
-        height: 100%; }
+        height: 100%;
+        -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
+                filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5)); }
     header .about_container .hexa_badges {
       position: relative;
       width: 500px;
-      height: 300px;
-      z-index: -5; }
+      height: 300px; }
       header .about_container .hexa_badges #about-badge {
-        fill: #fff; }
+        fill: #fff;
+        -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
+                filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5)); }
       header .about_container .hexa_badges .logo {
         position: absolute;
         top: 15px;
         left: -41px;
         width: 150px;
-        height: 150px; }
-      header .about_container .hexa_badges .front-end_hexa {
+        height: 150px;
+        -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
+                filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5)); }
+      header .about_container .hexa_badges .fe_hexa {
         position: absolute;
         left: -52px;
         top: 127px; }
@@ -279,11 +272,10 @@ header {
       position: absolute;
       min-height: 0px;
       min-width: 100%;
-      bottom: -20px;
+      bottom: 60px;
       padding: 0;
       margin: 0;
-      background-color: #fff;
-      z-index: -5; }
+      background-color: #fff; }
       header .header_bottom:after {
         content: '';
         width: 100%;
@@ -326,8 +318,7 @@ header {
       position: relative;
       top: 0;
       width: 400px;
-      height: 600px;
-      z-index: -5; }
+      height: 600px; }
   .header_bottom {
     min-width: 100%;
     position: absolute;
@@ -337,10 +328,15 @@ header {
     padding: 0; } }
 
 @media (max-width: 960px) {
+  body {
+    background-image: url("../img/hexa_bg.jpg");
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed; }
   header {
     width: 100%;
     height: 1100px;
-    padding: 50px 0 0 0; }
+    padding: 0; }
     header .about_container {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -380,8 +376,7 @@ header {
             -ms-flex-pack: center;
                 justify-content: center;
         width: 100%;
-        height: 400px;
-        z-index: -5; }
+        height: 400px; }
         header .about_container .hexa_badges .badges_container {
           position: relative;
           display: -webkit-box;
@@ -400,13 +395,13 @@ header {
             top: 280px;
             left: 65px;
             width: 120px; }
-          header .about_container .hexa_badges .badges_container .front-end_hexa {
+          header .about_container .hexa_badges .badges_container .fe_hexa {
             position: absolute;
-            top: -28px;
+            top: -26px;
             left: 6px; }
           header .about_container .hexa_badges .badges_container .dv_hexa {
             position: absolute;
-            top: -28px;
+            top: -26px;
             left: 123px; }
           header .about_container .hexa_badges .badges_container .de_hexa {
             position: absolute;
@@ -424,8 +419,7 @@ header {
 .hexagon-container {
   position: relative;
   overflow: hidden;
-  padding: 0 0 80px 0;
-  background: white; }
+  padding: 0 0 80px 0; }
   .hexagon-container .hexagon-inner {
     width: 855px;
     margin: 0 auto; }
@@ -538,19 +532,24 @@ header {
 
 .myskills {
   position: relative;
-  background-color: #008598;
   color: #fff;
-  height: 350px; }
+  height: 350px;
+  padding-top: 100px; }
   .myskills ul {
     margin: 0 auto; }
   .myskills .skills_modal {
     position: absolute;
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 0.7);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 100%;
     height: 100%;
     z-index: 1000;
-    text-align: center; }
+    text-align: center;
+    padding-top: 40px; }
     .myskills .skills_modal .skills_modal_inner {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -562,32 +561,40 @@ header {
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center;
+      height: 250px;
+      width: 250px;
+      border-radius: 500px;
       -webkit-transition: all 1s ease-out;
       transition: all 1s ease-out; }
       .myskills .skills_modal .skills_modal_inner .gesture-swipe-left {
-        height: 250px;
-        width: 250px;
-        fill: #008598;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        height: 180px;
+        width: 180px;
+        fill: #20C8C9;
         -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.7));
                 filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.7));
-        padding-top: 90px; }
+        margin-top: 30px; }
 
 .skills_logo {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   fill: #fff;
   -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
           filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5)); }
 
-@media (max-width: 767px) {
-  .tag_container1 {
-    position: relative;
-    float: none;
-    margin: 8px auto; }
-  .tag_container2 {
-    position: relative;
-    float: none;
-    margin: 8px auto; } }
+@media (max-width: 960px) {
+  .skills_logo {
+    width: 80%;
+    height: 80%;
+    fill: #fff;
+    -webkit-filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
+            filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5)); } }
 
 @media (max-width: 450px) {
   .skills_title_container {
@@ -604,8 +611,8 @@ header {
               transform: rotate(270deg); } }
 
 .form-container {
-  background: #fff !important;
-  padding: 50px 0 50px 0; }
+  background-color: transparent;
+  padding: 100px 0 50px 0; }
 
 form {
   max-width: 400px;
@@ -614,30 +621,50 @@ form {
   form input {
     font-family: 'Muli';
     font-weight: 300;
+    color: #fff;
     margin-bottom: 10px;
     width: 100%;
     height: 40px;
     border: none;
-    border-bottom: 3px solid #008598;
+    background: none;
+    border-bottom: 3px solid #fff;
     -webkit-transition: border-bottom 0.4s ease;
     transition: border-bottom 0.4s ease; }
     form input:focus, form input:active {
       outline: none;
-      border-bottom: 5px solid #006d7c; }
+      border-bottom: 5px solid #fff; }
+    form input::-webkit-input-placeholder {
+      color: white; }
+    form input:-ms-input-placeholder {
+      color: white; }
+    form input::-ms-input-placeholder {
+      color: white; }
+    form input::placeholder {
+      color: white; }
   form textarea {
     font-family: 'Muli';
     font-weight: 300;
     font-size: 18px;
+    color: #fff;
     width: 100%;
     margin: 10px 0 30px 0;
+    background: none;
     resize: none;
     border: none;
-    border-bottom: 3px solid #008598;
+    border-bottom: 3px solid #fff;
     -webkit-transition: border-bottom 0.4s ease;
     transition: border-bottom 0.4s ease; }
     form textarea:focus, form textarea:active {
       outline: none;
-      border-bottom: 5px solid #006d7c; }
+      border-bottom: 5px solid #fff; }
+    form textarea::-webkit-input-placeholder {
+      color: white; }
+    form textarea:-ms-input-placeholder {
+      color: white; }
+    form textarea::-ms-input-placeholder {
+      color: white; }
+    form textarea::placeholder {
+      color: white; }
   form button {
     display: block;
     width: 120px;
@@ -647,15 +674,15 @@ form {
     font-size: 18px;
     color: white;
     margin: 0 auto;
-    border: none;
-    background: #008598;
-    -webkit-transition: background-color 1s ease;
-    transition: background-color 1s ease;
+    border: 1px solid #fff;
+    background: none;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
     border-radius: 50px; }
     form button:hover {
-      border: 2px solid #008598;
-      color: #008598;
-      background: none; }
+      border: 2px solid #fff;
+      color: #fff;
+      background: #20C8C9; }
 
 .form-title {
   position: relative;
@@ -664,18 +691,27 @@ form {
   font-family: 'Muli';
   font-weight: 900;
   font-size: 30px;
-  color: #008598;
+  color: #fff;
   text-transform: uppercase; }
+
+footer {
+  font-family: 'Muli';
+  font-size: 12px;
+  color: #d2d2d2;
+  text-align: center !important;
+  margin: 10px 0 10px 0; }
 
 form {
   border: none;
-  font-family: 'Exo-regular'; }
+  font-family: 'Muli';
+  color: black;
+  font-size: 16px !important; }
 
 .form-control {
   border: 1px solid #465047;
   border-radius: 0px; }
   .form-control:focus {
-    border-color: #6b776c; }
+    border-color: #20C8C9; }
 
 .navbar {
   font-family: '';
